--- a/dom/VillaPlatzi/villaPlatzi.html
+++ b/dom/VillaPlatzi/villaPlatzi.html
@@ -7,6 +7,7 @@
     <title>VILLA PLATZI</title>
 </head>
 <body>
+    <canvas width="500" height="500" id = "villa_platzi"></canvas>
     <script src="villaPlatzi.js"></script>
 </body>
 </html>
