--- a/dom/Ejercicios/mod/mod/pakiman/pakiman.html
+++ b/dom/Ejercicios/mod/mod/pakiman/pakiman.html
@@ -7,6 +7,7 @@
     <title>PAKIMAN</title>
 </head>
 <body>
+    <h1>Pakimanes que ha atrapado!</h1>
     <script src="paki.js"></script>
 </body>
 </html>
